<resources>
    <string name="app_name">GoOffline</string>
    <string name="str_your_profile">Your Account</string>
    <string name="str_previous_orders">My Orders</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_new_offers">New Offers</string>
    <string name="str_shop_registration">Shop Registration</string>
    <string name="str_favourite">Wish List</string>
    <string name="str_home">Home</string>
    <string name="str_fav_store">Near By Stores</string>
    <string name="str_contact_us">Contact Us</string>
    <string name="str_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_your_cart">Your Cart</string>
    <string name="str_img_des">Image Content Description</string>
    <string name="desc_loc_text">We are accessing your location because we will use it to check nearby store around you so please allow location</string>
    <string name="keyword_helpertext">*Here,you have to give keyword by which your product is related or User will find your product with these keywords</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>